--- a/Staj Proje/CSS/Slider.css
+++ b/Staj Proje/CSS/Slider.css
@@ -10,7 +10,9 @@ body {
 }
 .wrapper {
   margin-top: 70px;
-  max-width: 1100px;
+  height: 100%;
+  max-width: 1200px;
+  height: 100%;
   width: 100%;
   position: relative;
 }
