--- a/Staj Proje/CSS/index.css
+++ b/Staj Proje/CSS/index.css
@@ -40,10 +40,39 @@
 #img3{
   float: left;
   margin-left: 20px;
-  margin-right: 0px;
-  width: 630px;
-  height: 370px;
+  margin-right: 20px;
+  width: 95%;
+  height: 100%;
+  object-fit: cover;
 } 
+.ikinciParca .ikinciParcaImgSet{
+  float: left;
+  width: 50%;
+  height: 400px;
+  margin-left: 20px;
+  object-fit: cover;
+  margin-bottom: 60px;
+}
+.ikinciParca .ikinciParcaImgSet .ikinciParcaImgSet2 #img31{
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  float: left;
+  margin-top: 160px;
+  left: 24%;
+  object-fit: cover;
+}
+#img31:hover{
+  transform: scale(1.1);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.ikinciParca .ikinciParcaImgSet2{
+  object-fit: cover;
+  width: 100%;
+  height: 400px;
+}
 .ikinciParca .ikiIcParca{
   margin-left: auto;
   margin-right: auto;
@@ -199,14 +228,13 @@
 .dorduncuKisim{
   float: left;
   align-items: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-image: url('https://wallpapermural.com/cdn/shop/products/Panda-monium_RoomScene_533x.png?v=1664883465');
+  background-image: url('https://ld-wt73.template-help.com/wt_61183/images/bg-index-body.jpg');
 }
 .dorduncuKisim #img4{
  float: right;
  width: 500px;
  height: 100%;
+ object-fit: cover;
 }
 .dorduncuKisim .ayrim21{
   align-self: center;
@@ -263,6 +291,11 @@
   width: 100%;
   height: 79%;
   background-color: cyan;
+}
+.bAyrim2  img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .bAyrim .bAyrim2 img:hover{
   opacity: 0.3;
@@ -334,6 +367,17 @@
 .besinciKisim .bAyrim .kart{
   align-items: center;
 }
+.bAyrim3{
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  opacity: 0;
+}
+.bAyrim2:hover .bAyrim3{
+  opacity: 0.5;
+  backface-visibility: hidden;
+}
 .besinciButton{
   background-color: orange;
   margin-top: 40px;
@@ -364,7 +408,7 @@
   width: 100%;
   height: 500px;
   float: left;
-  background-image: url('https://www.creativekidsartlessons.com/wp-content/uploads/2023/08/UK-Artists-banner-small.jpg.webp');
+  background-image: url('https://ld-wt73.template-help.com/wt_61183/images/parallax-01.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -373,7 +417,7 @@
   background-color: black;
   width: 100%;
   height: 100%;
-  opacity: 0.9;
+  opacity: 0.8;
 }
 .altinciKisim .altKKatman1{
   padding: 30px;
@@ -382,6 +426,18 @@
   float: left;
   height: 500px;
   background-color: black;
+}
+.altinciKisim .altKKatman1 table{
+  color: white;
+  text-align: center;
+  margin-top: 10px;
+}
+.altinciKisim .altKKatman1 table tr td{
+  color: white;
+  opacity: 0.7;
+  text-align: center;
+  font-size: 20px;
+  font-style: italic;
 }
 .altinciKisim .first .altKKatman1 .kimlik1 .resim1{
   width: 500px;
@@ -394,6 +450,18 @@
   float: right;
   height: 500px;
   background-color: black;
+}
+.altinciKisim .altKKatman2 table{
+  color: white;
+  text-align: center;
+  margin-top: 10px;
+}
+.altinciKisim .altKKatman2 table tr td{
+  color: white;
+  opacity: 0.7;
+  text-align: center;
+  font-size: 20px;
+  font-style: italic;
 }
 .altinciKisim .altKKatman1 .p1{
   margin-top: 30px;
@@ -559,9 +627,9 @@
   margin-right: auto;
 }
 .onbirinciKisim a img{
-  margin: 20px;
-  height: 150px;
-  width: 150px;
+  margin: 30px;
+  height: 119px;
+  width: 81px;
 }
 .onbirinciKisim .ayrim {
   margin-top: 60px;
