--- a/Staj Proje/CSS/responsive.css
+++ b/Staj Proje/CSS/responsive.css
@@ -6,7 +6,8 @@
     .ikinciParca #img3{
         margin-left: 20px;
         margin-right: 20px;
-        width: 90%;
+        max-width: 600px;
+        width: 100%;
         height: 90%;
     }
     .ikinciParca .ikiIcParca{
